--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-# fastapi==0.104.1
-# uvicorn[standard]==0.24.0
-# youtube-transcript-api==0.6.2
-requests==2.31.0
 fastapi
 uvicorn[standard]
-youtube-transcript-api>=1.1.0
+youtube-transcript-api==0.6.2
+requests==2.31.0
